# AdvancedCGStarter

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Shaders/Lab1/: basic.vert
src/: main.cpp
